--- a/quest3.html
+++ b/quest3.html
@@ -69,7 +69,7 @@
             <input type="text" id="q15">
         </div>
         <div class="question">
-            <label for="q16">16. что получит Weight_ после прохождения вами квеста</label>
+            <label for="q16">16. Что любит Weight_ </label>
             <input type="text" id="q16">
         </div>
         <div class="question">
