--- a/quest3.html
+++ b/quest3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кроссворд</title>
+    <title>Вопрос-Ответ</title>
     <link rel="stylesheet" href="./styles/quest3.css">
 </head>
 <body>
@@ -81,7 +81,7 @@
             <input type="text" id="q18">
         </div>
         <div class="question">
-            <label for="q19">19. Имя котика спрятанного на варпе</label>
+            <label for="q19">19. Имя котика спрятанного на варпе(если хотите поискать то тп на меня)</label>
             <input type="text" id="q19">
         </div>
         <div class="question">
